enhanced css for table

--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -16,6 +16,7 @@
                 <th>Longueur</th>
                 <th>Hauteur</th>
                 <th>Code EAN</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -29,6 +30,7 @@
                 <td>{{ article.length }}</td>
                 <td>{{ article.height }}</td>
                 <td>{{ article.barcode }}</td>
+                <td></td>
             </tr>
         {% endfor %}
         </tbody>
