improved template base.html.twig

--- a/templates/article/single.twig.html
+++ b/templates/article/single.twig.html
@@ -1,4 +1,6 @@
 {% extends "base.twig.html" %}
+{% block title %}Visualisation d'un article{% endblock %}
+
 {% block body %}
     {% if article == null %}
         <p>
