--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -1,4 +1,6 @@
 {% extends "base.twig.html" %}
+{% block title %}Liste des articles{% endblock %}
+
 {% block body %}
     <h1>Liste des articles</h1>
 
