--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
-        {% block head %}
-            <link rel="stylesheet" href="css/style.css" />
-            <title>{% block title %}{% endblock %} - My Webpage</title>
-        {% endblock %}
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="css/style.css" />
+        <title>WMS - {% block title %}{% endblock %}</title>
     </head>
+
     <body>
-        {% block body %}
-        {% endblock %}
+        {% block body %}{% endblock %}
         <script src="js/script.js"></script>
     </body>
 </html>
