--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -2,8 +2,11 @@
 {% block title %}Liste des articles{% endblock %}
 
 {% block body %}
-    <h1>Liste des articles</h1>
-
+    <h1>Gestion des articles</h1>
+    <p>
+        <a href="#" class="button">Ajouter un Article</a>
+    </p>
+    <h2>Liste des Articles</h2>
     {% if articles == null %}
     <p>Aucun article à afficher.</p>
     {% else %}
@@ -32,7 +35,12 @@
                 <td>{{ article.length }}</td>
                 <td>{{ article.height }}</td>
                 <td>{{ article.barcode }}</td>
-                <td></td>
+                <td>
+                    <ul id="article-edit">
+                        <li><a href="#" class="button">Editer</a></li>
+                        <li><a href="#" class="button">Supprimer</a></li>
+                    </ul>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
