--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -13,7 +13,7 @@
             <img src="https://place-hold.it/300x150" alt="logo">
             <nav>
                 <ul>
-                    <li>Articles</li>
+                    <li><a href="index.php?controller=article&action=show">Articles</a></li>
                     <li>Mouvements</li>
                     <li>Emplacements</li>
                     <li>Admin</li>
