--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,10 @@ th, td {
     padding: 10px;
 }
 
+input {
+    margin: 10px;
+}
+
 .button {
     display: inline-block;
     text-decoration: none;
