--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -2,6 +2,9 @@
 {% block title %}Liste des articles{% endblock %}
 
 {% block body %}
+    {% if param == 1 %}
+    <p class="error">Le fichier n'a pas été importé.</p>
+    {% endif %}
     <h1>Gestion des articles</h1>
     <div id="articles-actions">
         <div class="articles-action">
@@ -11,7 +14,7 @@
         <div class="articles-action">
             <h2>Importer un <a href="csv/importArticles.csv">fichier Articles</a></h2>
             <form method="POST" enctype="multipart/form-data" action="index.php?controller=article&action=import">
-                <input type="file" name="articleFile" id="articleFile" class="button">
+                <input type="file" name="articleFile" id="articleFile" class="button" accept=".csv">
                 <input type="submit" name="Importer">
                 <input type="hidden" value="{{ token }}">
             </form>
