--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -2,8 +2,11 @@
 {% block title %}Liste des articles{% endblock %}
 
 {% block body %}
-    {% if param == 1 %}
+    {% if param == 0 and param != null %}
     <p class="error">Le fichier n'a pas été importé.</p>
+    {% endif %}
+    {% if param == 1 %}
+    <p class="valid">Le fichier a bien été importé.</p>
     {% endif %}
     <h1>Gestion des articles</h1>
     <div id="articles-actions">
