--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -2,7 +2,7 @@
 {% block title %}Liste des articles{% endblock %}
 
 {% block body %}
-    {% if param == 0 and param != null %}
+    {% if param is defined and param == 0 %}
     <p class="error">Le fichier n'a pas été importé.</p>
     {% endif %}
     {% if param == 1 %}
