--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,17 +18,26 @@ input {
     display: inline-block;
     text-decoration: none;
     background-color: blue;
+    border: 4px solid blue;
     padding: 10px;
     border-radius: 10px;
     color: white;
 }
 
+.button:hover {
+    background-color: rgba(0, 0, 255, 0.8);
+}
+
 .error {
+    padding: 10px;
+    background-color: rgba(255, 0, 0, 0.2);
     text-align: center;
     color: red;
 }
 
 .valid {
+    padding: 10px;
+    background-color: rgba(0, 255, 0, 0.2);
     text-align: center;
     color: green;
 }
@@ -44,7 +53,8 @@ html, body {
 }
 
 main {
-    padding: 10px;
+    width: 70%;
+    margin: auto;
 }
 
 header {
