--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -30,7 +30,7 @@
     </div>
     {% if articles == null %}
     <h2>Liste des Articles</h02>
-    <p>Aucun article à afficher.</p>
+    <p class="error">Aucun article à afficher.</p>
     {% else %}
     <table>
         <caption>Liste des Articles</caption>
