--- a/templates/article/single.twig.html
+++ b/templates/article/single.twig.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     {% if article == null %}
-        <p>
+        <p class="error">
             L'article spécifié n'existe pas.
         </p>
     {% else %}
