--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <img src="https://place-hold.it/300x150" alt="logo">
+            <h1>Logiciel de Gestion de Stock</h1>
             <nav>
                 <ul>
                     <li><a href="index.php?controller=article&action=showlist">Articles</a></li>
