--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -15,9 +15,9 @@
             <a href="#" class="button">Ajouter un Article</a>
         </div>
         <div class="articles-action">
-            <h2>Importer un <a href="csv/importArticles.csv">fichier Articles</a></h2>
-            <form method="POST" enctype="multipart/form-data" action="index.php?controller=article&action=import">
-                <input type="file" name="articleFile" id="articleFile" class="button" accept=".csv">
+            <h2>Importer un <a href="/csv/importArticles.csv">fichier Articles</a></h2>
+            <form method="POST" enctype="multipart/form-data" action="/article/import">
+                <input type="file" name="articleFile" id="articleFile" class="button" accept=".csv" required>
                 <input type="submit" name="Importer">
                 <input type="hidden" name="token" id="token" value="{{ token }}">
             </form>
@@ -50,8 +50,8 @@
                 <td>{{ article.description }}</td>
                 <td>
                     <ul id="article-edit">
-                        <li><a href="index.php?controller=article&action=show&param={{ article.id }}" class="button">Editer</a></li>
-                        <li><a href="index.php?controller=article&action=delete&param={{ article.id }}" class="button" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer cet article ?');">Supprimer</a></li>
+                        <li><a href="/article/show/{{ article.id }}" class="button">Editer</a></li>
+                        <li><a href="/article/delete/{{ article.id }}" class="button" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer cet article ?');">Supprimer</a></li>
                     </ul>
                 </td>
             </tr>
