--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,28 @@
+/* common */
+@font-face {
+    font-family: "FontAwesome";
+    font-weight: normal;
+    font-display: auto;
+    font-style: normal;
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2") format("woff2");
+}
+/* END common */
+
+/* forms */
+input {
+    margin: 10px;
+}
+
+.articles-action form {
+    text-align: center;
+}
+/* END forms */
+
+/* tables */
 table {
     border-collapse: collapse;
+    text-align: center;
+    width: 100%;
 }
   
 table, th, td {
@@ -9,24 +32,24 @@ table, th, td {
 th, td {
     padding: 10px;
 }
+/* END tables */
 
-input {
-    margin: 10px;
-}
-
+/* buttons */
 .button {
+    text-align: center;
     display: inline-block;
     text-decoration: none;
-    background-color: blue;
-    border: 4px solid blue;
+    background-color: #3399cc;
+    border-bottom: 2px solid #006699;
     padding: 10px;
-    border-radius: 10px;
     color: white;
 }
 
 .button:hover {
-    background-color: rgba(0, 0, 255, 0.8);
+    background-color: #006699;
+    border-bottom: 2px solid #003366;
 }
+/* END buttons */
 
 .error {
     padding: 10px;
@@ -60,7 +83,7 @@ body {
 }
 
 main {
-    width: 70%;
+    width: 75%;
     margin: 20px auto;
     padding: 20px;
     background-color: #92a5b3;
@@ -109,11 +132,13 @@ header nav {
 #articles-actions {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .articles-action {
     padding: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
