--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -9,13 +9,14 @@
     <p class="valid">Le fichier a bien été importé.</p>
     {% endif %}
     <h1>Gestion des articles</h1>
-    <div id="articles-actions">
+    <hr>
+    <section id="articles-actions">
         <div class="articles-action">
-            <h2>Créer un nouvel Article</h2>
-            <a href="#" class="button">Ajouter un Article</a>
+            <h3>Créer un Article</h3>
+            <a href="/article/new" class="button">Ajouter un Article</a>
         </div>
         <div class="articles-action">
-            <h2>Importer un <a href="/csv/importArticles.csv">fichier Articles</a></h2>
+            <h3>Importer un <a href="/csv/importArticles.csv">fichier Articles</a></h3>
             <form method="POST" enctype="multipart/form-data" action="/article/import">
                 <input type="file" name="articleFile" id="articleFile" class="button" accept=".csv" required>
                 <input type="submit" name="Importer">
@@ -23,40 +24,43 @@
             </form>
         </div>
         <div class="articles-action">  
-            <h2>Rechercher un Article</h2>
+            <h3>Rechercher un Article</h3>
             <input type="text" name="articleFind" id="articleFind">
             <input type="submit" name="Rechercher">
         </div>       
-    </div>
-    {% if articles == null %}
-    <h2>Liste des Articles</h02>
-    <p class="error">Aucun article à afficher.</p>
-    {% else %}
-    <table>
-        <caption>Liste des Articles</caption>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Code</th>
-                <th>Description</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for article in articles %}
-            <tr>
-                <td>{{ article.id }}</td>
-                <td>{{ article.code }}</td>
-                <td>{{ article.description }}</td>
-                <td>
-                    <ul id="article-edit">
-                        <li><a href="/article/show/{{ article.id }}" class="button">Editer</a></li>
-                        <li><a href="/article/delete/{{ article.id }}" class="button" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer cet article ?');">Supprimer</a></li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    {% endif %}
+    </section>
+    <hr>
+    <section>
+        {% if articles == null %}
+        <h2>Liste des Articles</h02>
+        <p class="error">Aucun article à afficher.</p>
+        {% else %}
+        <table>
+            <caption>Liste des Articles</caption>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Code</th>
+                    <th>Description</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for article in articles %}
+                <tr>
+                    <td>{{ article.id }}</td>
+                    <td>{{ article.code }}</td>
+                    <td>{{ article.description }}</td>
+                    <td>
+                        <ul id="article-edit">
+                            <li><a href="/article/show/{{ article.id }}" class="button">Editer</a></li>
+                            <li><a href="/article/delete/{{ article.id }}" class="button" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer cet article ?');">Supprimer</a></li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
+    </section>
 {% endblock %}
