added icons to menu

--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -13,10 +13,9 @@
             <h1>Logiciel de Gestion de Stock</h1>
             <nav>
                 <ul>
-                    <li><a href="/article/showlist">Articles</a></li>
-                    <li>Mouvements</li>
-                    <li>Emplacements</li>
-                    <li>Admin</li>
+                    <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
+                    <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
+                    <li><a href="/admin/showlist" class="icon admin-icon">Admin</a></li>
                 </ul>
             </nav>
         </header>
