--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,40 @@ th, td {
 }
 /* END buttons */
 
+/* links */
+.icon {
+    position: relative;
+    padding-left: 30px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+}
+
+.icon:hover {
+    text-decoration: underline;
+}
+
+.icon::before {
+    font-family: FontAwesome;
+    font-size: 20px;
+    color: white;
+    position: absolute;
+    left: 0px;
+}
+
+.article-icon::before {
+    content: "\f1c0";
+}
+
+.movement-icon::before {
+    content: "\f1da";
+}
+
+.admin-icon::before {
+    content: "\f013";
+}
+/* END links */
+
 .error {
     padding: 10px;
     background-color: rgba(255, 0, 0, 0.2);
