--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -14,6 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
+                    <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
                     <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
                     <li><a href="/admin/showlist" class="icon admin-icon">Admin</a></li>
                 </ul>
