--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -5,18 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/css/style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900&display=swap" rel="stylesheet">
         <title>WMS - {% block title %}{% endblock %}</title>
     </head>
 
     <body>
         <header>
-            <h1>Logiciel de Gestion de Stock</h1>
+            <h1><span class="blue">Mana</span><span class="white">Stock</span></h1>
             <nav>
                 <ul>
                     <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
                     <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
                     <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
                     <li><a href="/admin/showlist" class="icon admin-icon">Admin</a></li>
+                    <li><a href="/user/logout" class="icon logout-icon">Déconnexion</a></li>
                 </ul>
             </nav>
         </header>
