--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <h1><span class="blue">Mana</span><span class="white">Stock</span></h1>
+            <p id="site-title"><span class="blue">Mana</span><span class="white">Stock</span></p>
             <nav>
                 <ul>
                     <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
