set style for h1, h2

--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -8,7 +8,7 @@
     {% if param == 1 %}
     <p class="valid">Le fichier a bien été importé.</p>
     {% endif %}
-    <h1><span class="blue">Gestion des </span><span class="white">Articles</span></h1>
+    <h1>Gestion des <span class="white">Articles</span></h1>
     <section id="articles-actions">
         <div class="articles-action">
             <h3>Créer un Article</h3>
