--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,15 +194,15 @@ header {
     color: white;
 }
 
-h1 { 
+h1, h2 {
+    padding: 5px 0;
     text-align: center;
-}
-
-h2 { 
-    text-align: center;
+    background-color: rgb(64, 64, 64);
+    border-radius: 20px 5px 20px 5px;
+    border-bottom: 4px solid rgb(112, 112, 112);
+    box-shadow: -1px 2px 5px 1px rgba(0, 51, 102, 0.4);
     color: #006699;
 }
-
 
 header ul {
     padding: 0;
