--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900&display=swap" rel="stylesheet">
-        <title>WMS - {% block title %}{% endblock %}</title>
+        <title>ManaStock - {% block title %}{% endblock %}</title>
     </head>
 
     <body>
