--- a/templates/article/new.twig.html
+++ b/templates/article/new.twig.html
@@ -2,5 +2,41 @@
 {% block title %}Création d'un article{% endblock %}
 
 {% block body %}
-    <h1>Création d'un <span class="white">Article</span></h1>
+    <section>
+        {% if log is defined and log == 0 %}
+            <p class="error">
+                La création d'article a échoué.
+            </p>
+        {% elseif log == 1 %}
+            <p class="error">
+                Le code article existe déjà.
+            </p>
+        {% endif %}
+        <h1>Création d'un <span class="white">Article</span></h1>
+        <form method="POST" action="/article/record">
+            <label>Code
+                <input type="text" id="code" name="code" value="{{ article.code }}" required>
+            </label>
+            <label>Description
+                <input type="text" id="description" name="description" value="{{ article.description }}" required>
+            </label>
+            <label>Poids
+                <input type="number" id="weight" name="weight" value="{{ article.weight }}" required>
+            </label>
+            <label>Largeur
+                <input type="number" id="width" name="width" value="{{ article.width }}" required>
+            </label>
+            <label>Hauteur
+                <input type="number" id="height" name="height" value="{{ article.height }}" required>
+            </label>
+            <label>Longueur
+                <input type="number" id="length" name="length" value="{{ article.length }}" required>
+            </label>
+            <label>Code à Barre
+                <input type="text" id="barcode" name="barcode" value="{{ article.barcode }}" required>
+            </label>
+            <input type="submit" value="Créer l'article">
+            <input type="hidden" id="token" name="token" value = {{ token }}>
+        </form>
+    </section>
 {% endblock %}
