--- a/templates/article/single.twig.html
+++ b/templates/article/single.twig.html
@@ -11,6 +11,10 @@
             <p class="valid">
                 La mise à jour a été effectuée.
             </p>
+        {% elseif log == 3 %}
+            <p class="valid">
+                L'article a bien été créé'.
+            </p>
         {% endif %}
 
         {% if article == null %}
@@ -21,23 +25,23 @@
         {% else %}
             <h1>Fiche Article : <span class="white">{{ article.code }}</span> [id: {{ article.id }}]</h1>
             <form method="POST" action="/article/update/{{ article.id }}">
-            <label>Description
-                <input type="text" id="description" name="description" value="{{ article.description }}" required>
+                <label>Description
+                    <input type="text" id="description" name="description" value="{{ article.description }}" required>
                 </label>
                 <label>Poids
                     <input type="number" id="weight" name="weight" value="{{ article.weight }}" required>
                 </label>
                 <label>Largeur
-                <input type="number" id="width" name="width" value="{{ article.width }}" required>
+                    <input type="number" id="width" name="width" value="{{ article.width }}" required>
                 </label>
                 <label>Hauteur
                     <input type="number" id="height" name="height" value="{{ article.height }}" required>
                 </label>
                 <label>Longueur
-                <input type="number" id="length" name="length" value="{{ article.length }}" required>
+                    <input type="number" id="length" name="length" value="{{ article.length }}" required>
                 </label>
                 <label>Code à Barre
-                <input type="text" id="barcode" name="barcode" value="{{ article.barcode }}" required>
+                    <input type="text" id="barcode" name="barcode" value="{{ article.barcode }}" required>
                 </label>
                 <input type="submit" value="Mettre à jour">
                 <input type="hidden" id="code" name="code" value = {{ article.code }}>
