import file format check

--- a/templates/article/list.twig.html
+++ b/templates/article/list.twig.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     {% if log is defined and log == 0 %}
-        <p class="error">Le fichier n'a pas été importé.</p>
+        <p class="error">Le fichier n'a pas été importé. il contient des erreurs.</p>
     {% endif %}
     {% if log == 1 %}
         <p class="valid">Le fichier a bien été importé.</p>
