--- a/templates/admin.twig.html
+++ b/templates/admin.twig.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900&display=swap" rel="stylesheet">
-        <title>ManaStock - {% block title %}{% endblock %}</title>
+        <title>ManaStock [ADMIN] - {% block title %}{% endblock %}</title>
     </head>
 
     <body>
@@ -14,11 +14,9 @@
             <p id="site-title"><span class="blue">Mana</span><span class="white">Stock</span></p>
             <nav>
                 <ul>
-                    <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
-                    <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
-                    <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
-                    <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
-                    <li><a href="/user/logout" class="icon logout-icon">Déconnexion</a></li>
+                    <li><a href="/user/index" class="icon user-icon">Utilisateurs</a></li>
+                    <li><a href="/location/showlist" class="icon location-icon">Emplacements</a></li>
+                    <li><a href="/article/showlist" class="icon return-icon">Retour</a></li>
                 </ul>
             </nav>
         </header>
