--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -13,13 +13,19 @@
         <header>
             <p id="site-title"><span class="blue">Mana</span><span class="white">Stock</span></p>
             <nav>
-                <ul>
-                    <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
-                    <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
-                    <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
-                    <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
-                    <li><a href="/user/logout" class="icon logout-icon">Déconnexion</a></li>
-                </ul>
+                {% if profile is defined %}
+                    <ul>
+                        <li><a href="/article/showlist" class="icon article-icon">Articles</a></li>
+                        <li><a href="/stock/showlist" class="icon stock-icon">Stocks</a></li>
+                        <li><a href="/movement/showlist" class="icon movement-icon">Mouvements</a></li>
+                        {% if profile == 'admin' %}
+                            <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
+                        {% endif %}
+                        <li><a href="/user/logout" class="icon logout-icon">Déconnexion</a></li>
+                    </ul>
+                {% else %}
+                    <p class="error">Veuillez vous connecter pour accéder au menu</p>
+                {% endif %}
             </nav>
         </header>
         <main>
