--- a/templates/admin.twig.html
+++ b/templates/admin.twig.html
@@ -23,6 +23,8 @@
         <main>
             {% block body %}{% endblock %}
         </main>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="/js/script.js"></script>
     </body>
 </html>
