--- a/templates/admin.twig.html
+++ b/templates/admin.twig.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="/user/index" class="icon user-icon">Utilisateurs</a></li>
-                    <li><a href="/location/showlist" class="icon location-icon">Emplacements</a></li>
+                    <li><a href="/location/index" class="icon location-icon">Emplacements</a></li>
                     <li><a href="/article/showlist" class="icon return-icon">Retour</a></li>
                 </ul>
             </nav>
