--- a/templates/admin/user.twig.html
+++ b/templates/admin/user.twig.html
@@ -1,4 +1,5 @@
 {% extends "admin.twig.html" %}
+{% block title %}Gestion des Utilisateurs{% endblock %}
 
 {% block body %}
     <h1>Gestion des utilisateurs</h1>
